--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ yolov5/
 *.zip
 src/notebooks/.ipynb_checkpoints/CROHME EDA-checkpoint.ipynb
 src/notebooks/.ipynb_checkpoints/YOLO-checkpoint.ipynb
+/src/.ipynb_checkpoints
